--- a/dbms/db/docker-compose.yml
+++ b/dbms/db/docker-compose.yml
@@ -1,17 +1,16 @@
 services:
-  postgres:
+  db:
     image: postgres:15
     container_name: real_estate_db
     restart: always
-    environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin123
-      POSTGRES_DB: realestate
+    shm_size: 128mb
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/1-init.sql
 
   pgadmin:
     image: dpage/pgadmin4
